--- a/markup/scss/layout/far-styles.scss
+++ b/markup/scss/layout/far-styles.scss
@@ -129,8 +129,172 @@
 		margin: 0;
 	}
 }
+.info-list{
+	.person-info{
+		margin: 0 0 0 -25px;
+	}
+}
+.person-info{
+	overflow: hidden;
+	li{
+		float: left;
+		margin: 0 20px 0 0;
+		position: relative;
+		&:last-child{ 
+			margin: 0;
+		}
+		span{
+			color: #1eb9bd;
+		}
+	}
+	.icon-user{
+		position: relative;
+		&:before{
+			content: "";
+			z-index: 2;
+			display: inline-block;
+			vertical-align: top;
+			width: 14px;
+			height: 16px;
+			margin: 2px 8px 0 0;
+			background: url(../images/sprite1.png) -87px -2px no-repeat;
+		}
+	}
+}
+#main .message{
+	position: relative;
+	font-size: 12px;
+	line-height: 16px;
+	color: #20c6ca;
+	font-weight: bold;
+	padding: 0 0 0 23px;
+	display: inline-block;
+	vertical-align: top;
+	width: 112px;
+	text-align: left;
+	&:before{
+		position: absolute;
+		content: "";
+		z-index: 2;
+		top: 0;
+		left: 0;
+		width: 16px;
+		height: 12px;
+		background: url(../images/sprite1.png) -60px -5px no-repeat;
+	}
+}
+.agent-block .info-box .check{
+	display: inline-block;
+	vertical-align: top;
+	width: 112px;
+	margin: 0 0 15px;
+	text-align: left;
+}
+.table{
+	tr{
+		&:nth-of-type(2n){
+			background: #edfafa;
+		}
+	}
+	td{
+		width: 50%;
+		border: none!important;
+		&:last-child{
+			padding: 8px 8px 8px 0;
+		}
+	}
+	p{
+		margin: 0 0 6px;
+	}
+}
+#main{
+	h5{
+		span{
+			color: #20c6ca; 
+		}
+	}
+	.point{
+		margin: 0 0 20px;
+	}
+	.box.alt{
+		h5{
+			font-size: 16px;
+			line-height: 20px;
+		}
+		p{
+			margin-bottom: 4px;
+		}
+	}
+	.list.alt{
+		li{
+			padding: 0 0 0 25px;
+			margin: 0 0 10px;
+			&:before{
+				background: #20c6ca;
+				width: 8px;
+				height: 8px;
+				top: 6px;
+			}
+		}
+	}
+}
+.article-list{
+	span{
+		color: #4c4f54;
+	}
+}
+.article-list.alt{
+	font-size: 12px!important;
+	li{
+		width: 21%;
+	}
+	p{
+		font-size: 12px;
+		line-height: 16px;
+		margin: 0 0 4px;
+	}
+}
+.img-block .check{
+	display: block;
+	margin: 0 0 10px;
+}
+.agent-block .img-block.alt p{ line-height: 16px;}
+#sidebar{
+	.article-list{
+		li{
+			display: block;
+			width: 100%;
+			margin-bottom: 20px;
+			a{
+				overflow: hidden;
+				display: block;
+			}
+		}
+		p{
+			margin-bottom: 8px;
+		}
+		.short-info{
+			overflow: hidden;
+		}
+		.img-box{
+			width: 35%;
+			float: left;
+			margin: 0 10px 0 0;
+			img{
+				width: 100%;
+			}
+		}
+	}
+}
+
+
+
+
 @media only screen and (max-width:$container-large-desktop) {
 	
+}
+@media only screen and (min-width:$mobile) and (max-width:$screen-md){
+	.article-list.alt img { width: 100% !important; }
 }
 
 @media only screen and (max-width:$screen-md) {
@@ -140,6 +304,9 @@
 	.text-frame.text-right { margin-top: -30px; }
 	#main .vacation-block .ico-box .case1 { margin: -27% 0 0 -39%; }
 	#main .vacation-block .ico-box .clock { margin: -31% 0 0 -33%; }
+	.info-block .box { padding: 0 0 0 17px; }
+	#main .point { margin: 0 0 10px; }
+	.vacation-block h3 { text-align: center; }
 }
 
 @media only screen and (max-width:$mobile) {
@@ -148,4 +315,11 @@
 	#main .comments::before { top: 2px; }
 	#main .vacation-block .ico-box .case1 { margin: -33% 0 0 -49%; }
 	#main .vacation-block .ico-box .clock { margin: -39% 0 0 -44%; }
+	.info-block .box{ h4 { text-align: center; } }
+	#main .list.alt li { margin: 0 0 5px; padding: 0 0 0 17px; }
+	#main .list.alt li:before { top: 4px; }
+	#main .box.alt h5 { line-height: 16px; }
+	.agent-block .info-box .check { margin: 0 10px 10px 0; }
+	.table > tbody > tr > td { padding: 6px; }
+	.table td:last-child { padding: 6px 6px 6px 0; }
 }
