--- a/markup/scss/components/custom-form.scss
+++ b/markup/scss/components/custom-form.scss
@@ -40,20 +40,36 @@
 }
 .jcf-checkbox.jcf-checked span{display:block;}
 
+.search-form .jcf-select {
+	min-width: 150px;
+	height: 40px;
+	padding:6px 0 8px;
+	border-radius:4px;
+	border:1px solid #fff;
+	font-weight:bold;
+	.jcf-select-text {
+		margin: 0 35px 0 44px;
+	}
+	&.jcf-drop-active{
+		border:1px solid $grey-color;
+	}
+}
+
 .jcf-select {
 	display: inline-block;
 	vertical-align: top;
 	position: relative;
 	background: #fff;
-	margin: 0 0 12px;
+	margin: 0;
 	min-width: 150px;
 	height: 40px;
-	font-weight:bold;
+	font-weight:normal;
 	font-size:$base-font-size;
 	cursor:pointer;
 	padding:6px 0 8px;
 	border-radius:4px;
-	border:1px solid #fff;
+	border:2px solid #eeeee6;
+	width:100%;
 }
 .jcf-select select {
 	z-index: 1;
@@ -65,10 +81,11 @@
 	white-space: nowrap;
 	overflow: hidden;
 	display: block;
-	font-size: 15px;
+	font-size: 16px;
 	line-height: 26px;
-	margin: 0 35px 0 44px;
 	cursor:pointer;
+	margin:-1px 35px 0 9px;
+	color:#656565;
 }
 .jcf-select .jcf-select-opener {
 	position: absolute;
@@ -134,7 +151,7 @@ body > .jcf-select-drop.jcf-drop-flipped {
 	display: inline-block;
 	overflow: auto;
 	width: 100%;
-	border:1px solid $grey-color;
+	border:1px solid #eeeee6;
 	border-top:none;
 }
 .jcf-list ul {
@@ -156,7 +173,7 @@ body > .jcf-select-drop.jcf-drop-flipped {
     font-size: 15px;
     height: 1%;
     overflow: hidden;
-    padding: 13px 14px;
+    padding: 13px 13px;
     white-space: nowrap;
 }
 .jcf-list .jcf-disabled {
@@ -182,9 +199,6 @@ body > .jcf-select-drop.jcf-drop-flipped {
 }
 /* common custom form elements styles */
 .jcf-disabled {background: #ddd !important;}
-.jcf-drop-active{
-	border:1px solid $grey-color;
-}
 
 /* custom radio styles */
 .jcf-radio {
@@ -223,3 +237,70 @@ body > .jcf-select-drop.jcf-drop-flipped {
 	top: 0;
 }
 .jcf-radio.jcf-checked span {display:block;}
+
+/* custom file input styles */
+.jcf-file {
+	display:block;
+	white-space: nowrap;
+	position: relative;
+	overflow: hidden;
+	background: #fff;
+}
+.jcf-file .jcf-real-element {
+	position: absolute;
+	font-size: 200px;
+	height: 200px;
+	margin: 0;
+	right: 0;
+	top: 0;
+}
+.jcf-file .jcf-fake-input {
+	display: inline-block;
+	text-overflow:ellipsis;
+	white-space: nowrap;
+	vertical-align: top;
+	overflow: hidden;
+	border: 1px solid #777;
+	padding: 0 8px;
+	font-size: 13px;
+	line-height: 28px;
+	height: 28px;
+	width: 125px;
+	display:none;
+}
+.jcf-file .jcf-upload-button {
+	background: #20c6ca;
+    border: 1px solid #20c6ca;
+    border-radius: 3px;
+    color: #fff;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: bold;
+    height: 40px;
+    line-height: 28px;
+    overflow: hidden;
+    padding: 5px 27px 0 43px;
+    position: relative;
+    vertical-align: top;
+    white-space: nowrap;
+    cursor:pointer;
+    z-index:99;
+    &:hover{
+    	opacity: 0.75;
+    }
+	&:after{
+		background:url(../images/sprite.png) no-repeat -52px -57px;
+		position:absolute;
+		content:'';
+		top:11px;
+		left:15px;
+		height:16px;
+		width:13px;
+	}
+}
+
+#sidebar{
+	.modal{
+		text-align:left;
+	}
+}
