--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -11,5 +11,6 @@
 @import "layout/footer";
 
 @import "layout/far-styles";
+@import "components/bootstrap-datepicker";
 
 @import "layout/media-respond";
