--- a/markup/scss/base/base-reset.scss
+++ b/markup/scss/base/base-reset.scss
@@ -154,7 +154,7 @@ input[type="password"],
 input[type="tel"]{
   font-size:$base-font-size - 1;
   line-height:16px;
-  color:#4c4f54;
+  color:#000;
   padding:5px 10px;
   height:40px;
   display:block;
