--- a/markup/scss/components/modals.scss
+++ b/markup/scss/components/modals.scss
@@ -14,6 +14,7 @@
 	}
 	p{
 		color:$grey-color;
+		font-size:15px;
 	}
 	&.modal2{
 		h4{
@@ -29,7 +30,7 @@
 		}
 		.modal-footer{
 			border-top: 2px solid #eeeee6;
-			padding:29px 0 20px;
+			padding:22px 0 20px;
 		}
 		.btn{
 			min-width:180px;
@@ -46,6 +47,22 @@
 				vertical-align: middle;
 			}
 		}
+	}
+	.form-group .form-row{
+		margin:0;
+		label{
+			margin:0;
+			font-weight:normal;
+			color:#999;
+		}
+	}
+	h3{
+		font-size:16px;
+		margin:0 0 20px;
+		text-transform:uppercase;
+	}
+	.checkbox{
+		margin-bottom:15px;
 	}
 }
 
